examples/policies/kubernetes/serviceaccount/demo-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leia-deployment
spec:
  selector:
    matchLabels:
      name: leia
  replicas: 1
  template:
    metadata:
      labels:
        name: leia
    spec:
      serviceAccountName: leia
      containers:
      - name: leia-container
        image: quay.io/cilium/json-mock:v1.4.1@sha256:6a66df90808a39c02e7a9d58af7bf0e54d8f8b7d4bc528f48c891969a7049195
---
apiVersion: v1
kind: Service
metadata:
  name: leia
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    name: leia
---
apiVersion: v1
kind: Pod
metadata:
  name: luke-pod
spec:
  serviceAccountName: luke
  containers:
  - name: luke-container
    image: quay.io/cilium/json-mock:v1.4.1@sha256:6a66df90808a39c02e7a9d58af7bf0e54d8f8b7d4bc528f48c891969a7049195
---
apiVersion: v1
kind: Pod
metadata:
  name: vader-pod
spec:
  serviceAccountName: vader
  containers:
  - name: vader-container
    image: quay.io/cilium/json-mock:v1.4.1@sha256:6a66df90808a39c02e7a9d58af7bf0e54d8f8b7d4bc528f48c891969a7049195
